Acceso con Google habilitado

--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
         <a href="#">¿Ya tienes una cuenta? Inicia sesión aquí</a>
 
         <h3>o</h3>
-        <button type="submit">Ingresa con Google<img src="img/GoogleIcon.png"></button>
+        <button type="button" class="googleLogin" id="googleLogin">Ingresa con Google<img src="img/GoogleIcon.png"></button>
       </div>
     </form>
   </div>
@@ -50,7 +50,7 @@
 
   <script>
     // Your web app's Firebase configuration
-    var firebaseConfig = {
+    let firebaseConfig = {
       apiKey: "AIzaSyDPAJJXty5jxXp4Zppqh-XOQltl3H1H9Yk",
       authDomain: "red-social-4f643.firebaseapp.com",
       projectId: "red-social-4f643",
@@ -64,7 +64,7 @@
 
   </script>
   <script type="module" src="lib/firebaseAuth.js"></script>
-  <script type="module" src="lib/index.js"></script>
+  <script type="module" src="lib/signup.js"></script>
 </body>
 
 </html>
