--- a/src/index.html
+++ b/src/index.html
@@ -11,45 +11,34 @@
 
 <body>
   <header>
-    <img src="img/Logo.png" alt="">
-    <div id="description">
-      <p>Únete a ésta gran comunidad dedicada a los amantes de las mascotas.</p>
+    <div id="logo">
+      <img src="img/Logo.png" alt="">
     </div>
   </header>
 
-  <div id="signUpForm" class="signUpForm">
-    <form>
-      <h1>Crear cuenta</h1>
-      <label for="name">Nombre o apodo</label>
-      <input id="name" type="text" placeholder="Ingresar nombre de usuario" required>
-
-      <label for="email">Correo electrónico</label>
-      <input id="emailSignUp" type="email" placeholder="Ingresar correo" required>
-
-      <label for="password">Contraseña</label>
-      <input id="passwordSignUp" type="password" placeholder="Crear contraseña" minlength="8" required><br>
-
-      <button id="record" type="submit">Registrarme</button><br>
-
-      <div class="question">
-        <a href="#">¿Ya tienes una cuenta? Inicia sesión aquí</a>
-
-        <h3>o</h3>
-        <button type="button" class="googleLogin" id="googleLogin">Ingresa con Google<img src="img/GoogleIcon.png"></button>
-      </div>
-    </form>
+  <div id="navBar">
+    <nav>
+      <ul>
+        <li><a href="http://localhost:5000/#registro">Registro</a></li>
+        <li><a href="http://localhost:5000/#iniciosesion">Iniciar Sesión</a></li>
+      </ul>
+    </nav>
   </div>
 
+  <div id="description">
+    <p>Únete a esta gran comunidad dedicada a los amantes de las mascotas.<br>
+      <img src="img/pets.jpg">
+    </p>
+  </div>
 
-  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <main id="root"></main>
+
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
-
-  <!-- TODO: Add SDKs for Firebase products that you want to use
-     https://firebase.google.com/docs/web/setup#available-libraries -->
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
+  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script> -->
 
   <script>
-    // Your web app's Firebase configuration
+
     let firebaseConfig = {
       apiKey: "AIzaSyDPAJJXty5jxXp4Zppqh-XOQltl3H1H9Yk",
       authDomain: "red-social-4f643.firebaseapp.com",
@@ -58,13 +47,12 @@
       messagingSenderId: "332128175795",
       appId: "1:332128175795:web:e8b9a253a739c88be612c6"
     };
-    // Initialize Firebase
+   
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
 
   </script>
-  <script type="module" src="lib/firebaseAuth.js"></script>
-  <script type="module" src="lib/signup.js"></script>
+  <script type="module" src="./main.js"></script>
 </body>
 
 </html>
