observador de estado de autenticación, agrego comentarios en código y prueba de vista posts

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="registro.css" />
+  <link rel="stylesheet" href="styles.css" />
   <title>PetSpace</title>
 </head>
 
@@ -16,26 +16,11 @@
     </div>
   </header>
 
-  <div id="navBar">
-    <nav>
-      <ul>
-        <li><a href="http://localhost:5000/#registro">Registro</a></li>
-        <li><a href="http://localhost:5000/#iniciosesion">Iniciar Sesión</a></li>
-      </ul>
-    </nav>
-  </div>
-
-  <div id="description">
-    <p>Únete a esta gran comunidad dedicada a los amantes de las mascotas.<br>
-      <img src="img/pets.jpg">
-    </p>
-  </div>
-
   <main id="root"></main>
 
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-app.js"></script>
   <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-auth.js"></script>
-  <!-- <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script> -->
+  <script src="https://www.gstatic.com/firebasejs/8.6.1/firebase-firestore.js"></script>
 
   <script>
 
@@ -50,9 +35,15 @@
    
     firebase.initializeApp(firebaseConfig);
     const auth = firebase.auth();
+    const db = firebase.firestore();
 
   </script>
   <script type="module" src="./main.js"></script>
 </body>
 
 </html>
+
+<!-- <div id="timeline" class="timeline">
+<div id="boxPosts" class="boxPosts">
+  <button id="publishBtn" class="publishBtn"></button>
+</div> -->
